web-infras/parser/tests/fixtures/babel/es2015/uncategorised/285/output.txt
[SyntaxError]: Numeric Literal and string literal can not use as shorted property. (1,4)
1|({ 5 }) => {}
 |  ^
